frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-shop-deployment
  labels:
    app: demo-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-shop
  template:
    metadata:
      labels:
        app: demo-shop
    spec:
      containers:
      - name: demo-shop-app
        image: us-west1-docker.pkg.dev/zerok-dev/java-spring-boot-demo/frontend:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        env: # Setting Enviornmental Variables
          - name: EXTERNAL_HOSTNAME   # Setting Database host address from configMap
            valueFrom:
              configMapKeyRef:
                name: frontend-app-configmap
                key: EXTERNAL_HOSTNAME
