frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-shop-service
spec:
  selector:
    app: demo-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
